# SINCOV-BACKEND

./: .env.exaple  README.md  alembic.ini  docker-compose.yml  pytest.ini  requirements-freeze.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 19fe442743e4_add_station_monitor_sensor_report_.py  525891aaccfb_init_schema.py  6bf7145dc559_delete_description_from_station.py  9b2db884ad8a_add_alerts_linked_to_predictions_and_.py  ab4c30080fce_add_station_rmcab_id_and_lat_lon_fields.py  d27bcfbf4c31_update_subscription_table_with_name_.py
app/: main.py
app/api/: routes_predict.py  (+2 more)
app/ml/prophet_model/: __init__.py  prophet_predictor.py  pyproject.toml
cache/: station_1.json  station_11.json  station_13.json  station_17.json  station_2.json  station_24.json  station_26.json  station_27.json  station_3.json  station_30.json  station_32.json  station_34.json  station_37.json  station_38.json  station_39.json  station_4.json  station_5.json  station_6.json  station_8.json  station_9.json
config/: station_monitors.json
debug_responses/: station_11_raw.json  station_13_raw.json  station_17_raw.json  station_1_raw.json  station_24_raw.json  station_26_raw.json  station_27_raw.json  station_30_raw.json  station_32_raw.json  station_34_raw.json  station_37_raw.json  station_38_raw.json  station_39_raw.json  station_3_raw.json  station_4_raw.json  station_5_raw.json  station_6_raw.json  station_8_raw.json  station_9_raw.json
tests/: conftest.py  test_api.py  test_db.py  test_rmcab_utils.py  test_services.py  test_stations_api.py
(+46 files in other folders)
